# megamol

./: CMakeExternals.cmake  zmqreceive.py
bin32/: MegaMolConf.core.state  VrInterop.mmplg  archvis.mmplg  cinematic.mmplg  compositing_gl.mmplg  geometry_calls.mmplg  gui.mmplg  image_calls.mmplg  infovis.mmplg  megamolconfig.lua  mesh.mmplg  mmstd_datatools.mmplg  mmstd_moldyn.mmplg  mmstd_trisoup.mmplg  mmstd_volume.mmplg  protein_calls.mmplg  pwdemos.mmplg
cmake/: ZeroMQConfig.cmake  ZeroMQConfigVersion.cmake  ZeroMQTargets-debug.cmake  ZeroMQTargets.cmake
core/include/mmcore/view/: AbstractView.h  AbstractView_EventConsumption.h  Camera.h  View2DGL.h  View3DGL.h
core/src/view/: AbstractView3D.cpp  AbstractView_EventConsumption.cpp
frontend/main/src/: CLIConfigParsing.cpp  main.cpp
frontend/resources/include/: GenericImage.h  RuntimeConfig.h  Screenshots.h  WindowManipulation.h
frontend/resources/src/: GenericImage.cpp
frontend/services/gui/: GUI_Service.cpp  GUI_Service.hpp
frontend/services/image_presentation/: ImagePresentation_Service.cpp  ImagePresentation_Service.hpp
frontend/services/lua_service_wrapper/: Lua_Service_Wrapper.cpp
frontend/services/opengl_glfw/: OpenGL_GLFW_Service.cpp
frontend/services/screenshot_service/: Screenshot_Service.cpp  Screenshot_Service.hpp
plugins/gui/src/: GUIView.cpp  GUIView.h  GUIWindows.cpp  GUIWindows.h
plugins/mmstd_volume/Shaders/raycast_volume/: raycast_volume_c.glsl
plugins/mmstd_volume/src/: RaycastVolumeRenderer.cpp
plugins/spout_sender/: CMakeLists.txt  interop_test.mmprj
plugins/spout_sender/MWK-mint/: CMakeLists.txt  README.md
plugins/spout_sender/MWK-mint/Unity-mint/: BoundingBoxCornersJsonReceiver.cs  CoordinateSystemTransformations.cs  DataTypes.cs  IJsonStringConvertible.cs  IJsonStringReceivable.cs  ModelPoseJsonConverter.cs  ZMQReceiver.cs  ZMQSender.cs
plugins/spout_sender/MWK-mint/interop/: CMakeLists.txt
plugins/spout_sender/MWK-mint/interop/src/: interop.cpp
plugins/spout_sender/MWK-mint/rendering/: CMakeLists.txt
plugins/spout_sender/MWK-mint/rendering/src/: rendering.cpp
plugins/spout_sender/SpoutSDK/: SpoutGLDXinterop.cpp  SpoutSDK.cpp
plugins/spout_sender/SpoutSDK/VS2012/: SpoutSDK.vcxproj
plugins/spout_sender/include/spout_sender/: spout_sender.h
plugins/spout_sender/src/: OSCHandler.cpp  OSCHandler.h  SpoutSenderRenderer.cpp  SpoutSenderRenderer.h  SpoutView3D.cpp  SpoutView3D.h  spout_sender.cpp  stdafx.h
plugins/vrinterop/src/: VrInteropView3D_2.cpp  VrInteropView3D_2.h
vislib/include/vislib/graphics/gl/: CameraOpenGL.h
